--- a/style.css
+++ b/style.css
@@ -14,10 +14,14 @@ body{
 .common_div{
     width:40%;
     float:left;
-    margin:15px 2%;
-    padding:3%;
+    margin:10px 2%;
+    padding:2%;
 }
 
 .common_div img{
-    width:90%;
+    width:95%;
+}
+
+.top_banner{
+    background-image: url("./img/top-banner.png");
 }
