--- a/style.css
+++ b/style.css
@@ -72,3 +72,37 @@ section{
 .nxt_div img{
     width:90%;
 }
+.exper{
+    background-image: url(./img/exp-bg.png);
+    background-position: bottom left;
+}
+.light{
+    color:tomato;
+}
+.mr_mango{
+    width:40%;
+    float:left;
+    margin:5px 2%;
+    padding:2%;
+    box-shadow: 2px 2px 10px black;
+}
+
+#full_stack{
+    border-left:7px solid;
+    border-image:linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+
+#baby_stack{
+    border-left:7px solid;
+    border-image:linear-gradient(rgb(9, 240, 248), rgb(30, 107, 223));
+    border-image-slice: 1;
+}
+.footer{
+    margin-top: 300px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.motoo{
+    font-weight: 800;
+}
